# SarumanEyeBot

./: README.md  crud.py  handlers.py  main.py  pyproject.toml
db/: create_db.py  db.py  models.py
tests/: crud_tests.py
